--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "compression": "^1.7.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "infrastructure-components": "^0.3.9",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1",
+    "styled-loaders-react": "^1.1.0"
   }
 }
