--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-import-css": "^1.0.0-alpha.11",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
     "nodemon": "^2.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
