--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "forum",
     "smoketrees"
   ],
+  "standard": {
+    "ignore": [
+      "src/public/**"
+    ]
+  },
   "author": "smoketrees",
   "license": "MIT",
   "bugs": {
@@ -35,6 +40,7 @@
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
     "nodemon": "^2.0.2",
+    "standard": "^14.3.3",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
