--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemon": "^2.0.2",
     "standard": "^14.3.3",
     "style-loader": "^1.1.3",
+    "svg-url-loader": "^5.0.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
