--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "infrastructure-components": "^0.3.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
     "styled-components": "^5.0.1",
     "styled-loaders-react": "^1.1.0"
   }
