--- a/package.json
+++ b/package.json
@@ -51,7 +51,12 @@
     "compression": "^1.7.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "highlight": "^0.2.4",
+    "highlight.js": "^9.18.1",
     "infrastructure-components": "^0.3.9",
+    "markdown-it": "^10.0.0",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-jsx": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-markdown": "^4.3.1",
