--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "markdown-it": "^10.0.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-jsx": "^1.1.0",
+    "marked": "^0.8.2",
+    "node-emoji": "^1.10.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-markdown": "^4.3.1",
