--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "standard": {
     "ignore": [
-      "src/public/**"
+      "src/static/public/**",
+      "src/components/preview/prism.js"
     ]
   },
   "author": "smoketrees",
@@ -54,6 +55,7 @@
     "infrastructure-components": "^0.3.9",
     "marked": "^0.8.2",
     "node-emoji": "^1.10.0",
+    "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.0.1",
