--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-infinite-loader": "^1.0.4",
     "styled-components": "^5.0.1",
     "styled-loaders-react": "^1.1.0"
   }
