--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "autosize": "^4.0.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "ejs": "^3.0.1",
@@ -57,6 +58,7 @@
     "node-emoji": "^1.10.0",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
+    "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.12.0",
     "react-infinite-loader": "^1.0.4",
     "styled-components": "^5.0.1",
