--- a/package.json
+++ b/package.json
@@ -49,14 +49,17 @@
   },
   "dependencies": {
     "@c4-smoketrees/user-management-client": "^1.0.5",
+    "aes-psswd": "^1.0.1",
     "autosize": "^4.0.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "highlight.js": "^9.18.1",
     "infrastructure-components": "^0.3.9",
+    "jsonwebtoken": "^8.5.1",
     "marked": "^0.8.2",
     "node-emoji": "^1.10.0",
     "prismjs": "^1.20.0",
