--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@c4-smoketrees/blog-client": "^1.0.0",
     "@c4-smoketrees/user-management-client": "^1.0.5",
     "aes-psswd": "^1.0.1",
     "autosize": "^4.0.2",
@@ -62,6 +63,7 @@
     "jsonwebtoken": "^8.5.1",
     "marked": "^0.8.2",
     "node-emoji": "^1.10.0",
+    "node-fetch": "^2.6.0",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-autosize-textarea": "^7.0.0",
