--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.12.0",
     "react-infinite-loader": "^1.0.4",
+    "sanitize-html": "^1.23.0",
     "styled-components": "^5.0.1",
     "styled-loaders-react": "^1.1.0"
   }
