--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   "homepage": "https://github.com/smoke-trees/blog#readme",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@types/express": "^4.17.6",
     "@types/react-dom": "^16.9.7",
@@ -42,7 +42,7 @@
     "babel-plugin-transform-import-css": "^1.0.0-alpha.11",
     "clean-css": "^4.2.3",
     "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^4.3.0",
     "nodemon": "^2.0.3",
     "raw-loader": "^4.0.1",
     "standard": "^14.3.3",
@@ -64,6 +64,7 @@
     "infrastructure-components": "^0.3.9",
     "jsonwebtoken": "^8.5.1",
     "marked": "^0.8.2",
+    "morgan": "^1.10.0",
     "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.0",
     "prismjs": "^1.20.0",
@@ -73,6 +74,7 @@
     "react-infinite-loader": "^1.0.4",
     "sanitize-html": "^1.23.0",
     "styled-components": "^5.0.1",
-    "styled-loaders-react": "^1.1.0"
+    "styled-loaders-react": "^1.1.0",
+    "winston": "^3.2.1"
   }
 }
