--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   "dependencies": {
     "@c4-smoketrees/blog-client": "^1.0.2",
     "@c4-smoketrees/user-management-client": "^1.0.5",
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
     "aes-psswd": "^1.0.1",
     "autosize": "^4.0.2",
     "body-parser": "^1.19.0",
