--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "react-infinite-loader": "^1.0.4",
     "sanitize-html": "^1.23.0",
     "styled-components": "^5.0.1",
-    "styled-loaders-react": "^1.1.0",
-    "winston": "^3.2.1"
+    "styled-loaders-react": "^1.1.0"
   }
 }
