users: Add profile picture support
Signed-off-by: ATechnoHazard <amolele@gmail.com>

--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,6 @@ USER_MANAGEMENT_URL=https://localhost:8443/user
 AESPASSWORD1=password1
 AESPASSWORD2=password2
 JWTSECRET=testsecret
+S3_ENDPOINT='sgp1.digitaloceanspaces.com'
+S3_KEY_ID=XXXXXXXXXXXXXXX
+S3_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
