--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@material-ui/icons": "^4.9.1",
     "aes-psswd": "^1.0.1",
     "autosize": "^4.0.2",
+    "aws-sdk": "^2.668.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -67,6 +68,7 @@
     "jsonwebtoken": "^8.5.1",
     "marked": "^0.8.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.0",
     "prismjs": "^1.20.0",
